Envoy/envoy.yaml
static_resources:

  listeners:
  - name: listener_0
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 10000
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          access_log:
          - name: envoy.access_loggers.stdout
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
          http_filters:
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match:
                  prefix: "/s"
                route:
                  prefix_rewrite: "/seller"
                  cluster: service_seller
              - match:
                  prefix: "/w"
                route:
                  prefix_rewrite: "/delivery"
                  cluster: service_delivery
  clusters:
  - name: service_seller
    type: LOGICAL_DNS
    # Comment out the following line to test on v6 networks
    dns_lookup_family: V4_ONLY
    load_assignment:
      cluster_name: service_seller
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: sellersapi
                port_value: 80
  - name: service_delivery
    type: LOGICAL_DNS
    # Comment out the following line to test on v6 networks
    dns_lookup_family: V4_ONLY
    load_assignment:
      cluster_name: service_delivery
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: warehouseapi
                port_value: 80
